@startuml 关系表

package "客户端" {
    class config {
        + device_id: UUID <<PK>>
        + kdf_salt: TEXT
        + kdf_iter: INTEGER
        + magic_text: TEXT
        + device_name : TEXT
        + enc_priv_key: TEXT
        + pub_key: TEXT
        + password_hint: TEXT
    }

    class vaults {
        + id: UUID <<PK>>
        + title: TEXT
        + username: TEXT
        + enc_password: TEXT
        + enc_notes: TEXT
        + url: TEXT
        + version: INTEGER
        + is_deleted: BOOLEAN
        + created_at: INTEGER
        + updated_at: INTEGER
    }

    class tags {
        + id: INTEGER <<PK>>
        + name: TEXT
    }

    class vault_tag_join {
        + vault_id: TEXT <<PK, FK>>
        + tag_id: INTEGER <<PK, FK>>
    }

    vaults "1" -- "*" vault_tag_join
    tags "1" -- "*" vault_tag_join
}

package "服务器端" {
    class devices {
        + device_id: UUID <<PK>>
        + device_name: TEXT
        + public_key: TEXT
        + signature: TEXT
    }

    class sync_records {
        + record_id: TEXT <<PK>>
        + source_device_id: TEXT <<FK>>
        + encrypted_blob: TEXT
        + blob_nonce : BYTEA <<12 字节随机数>>
        + sync_version: INTEGER <<单调递增>>
        + operation: TEXT
        + client_updated_at: INTEGER
        + server_updated_at: INTEGER
    }

    ' 服务器端表关系
    devices "1" -- "*" sync_records
}

@enduml